--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "hbs": "^4.1.1",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
-    "nodemon": "^2.0.6"
+    "nodemailer": "^6.4.17",
+    "nodemon": "^2.0.6",
+    "springedge": "^1.0.5"
   }
 }
